--- a/exmaple/example.html
+++ b/exmaple/example.html
@@ -11,8 +11,8 @@
         <section class="grid grid-col-3 grid-row-3 gap-3">
             <article class="card inline-flex gap-2 grid-item-col-1-3 grid-item-row-1-2 bg-primary-color-200">
                 <button class="">button</button>
-                <button class="primary">button</button>
-                <button class="secondary">button</button>
+                <button class="btn-primary">button</button>
+                <button class="btn-secondary">button</button>
             </article>
 
             <article class="card inline-flex gap-2 grid-item-col-3-4 grid-item-row-1-2">
@@ -25,14 +25,14 @@
 
             <article class="card inline-flex gap-2 grid-item-col-2-4 grid-item-row-2-3 bg-primary-color-300">
                 <button class="">button</button>
-                <button class="primary">button</button>
-                <button class="secondary">button</button>
+                <button class="btn-primary">button</button>
+                <button class="btn-secondary">button</button>
             </article>
 
             <article class="card inline-flex gap-2 grid-item-col-1-3 grid-item-row-3-4 bg-primary-color-500">
                 <button class="">button</button>
-                <button class="primary">button</button>
-                <button class="secondary">button</button>
+                <button class="btn-primary">button</button>
+                <button class="btn-secondary">button</button>
             </article>
 
             <article class="card inline-flex gap-2 grid-item-col-3-4 grid-item-row-3-4 bg-secondary-color-300">
