Chnage button css to scss

--- a/exmaple/button example.html
+++ b/exmaple/button example.html
@@ -3,6 +3,11 @@
     <head>
         <title>buttons</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="../lepton.css" type="text/css"/>
     </head>
 
@@ -12,6 +17,52 @@
         </section>
 
         <section class="grid grid-col-3 gap-3">
+            <article class="card">
+                <button class="btn-4sm">버튼</button>
+                <button class="btn-4sm btn-primary">버튼</button>
+                <button class="btn-4sm btn-secondary">버튼</button>
+            </article>
+            <article class="card">
+                <button class="btn-3sm">버튼</button>
+                <button class="btn-3sm btn-primary">버튼</button>
+                <button class="btn-3sm btn-secondary">버튼</button>
+            </article>
+            <article class="card">
+                <button class="btn-2sm">버튼</button>
+                <button class="btn-2sm btn-primary">버튼</button>
+                <button class="btn-2sm btn-secondary">버튼</button>
+            </article>
+            <article class="card">
+                <button class="btn-sm">버튼</button>
+                <button class="btn-sm btn-primary">버튼</button>
+                <button class="btn-sm btn-secondary">버튼</button>
+            </article>
+            <article class="card">
+                <button class="">버튼</button>
+                <button class="btn-primary">버튼</button>
+                <button class="btn-secondary">버튼</button>
+            </article>
+            <article class="card">
+                <button class="btn-lg">버튼</button>
+                <button class="btn-lg btn-primary">버튼</button>
+                <button class="btn-lg btn-secondary">버튼</button>
+            </article>
+            <article class="card">
+                <button class="btn-2lg">버튼</button>
+                <button class="btn-2lg btn-primary">버튼</button>
+                <button class="btn-2lg btn-secondary">버튼</button>
+            </article>
+            <article class="card">
+                <button class="btn-3lg">버튼</button>
+                <button class="btn-3lg btn-primary">버튼</button>
+                <button class="btn-3lg btn-secondary">버튼</button>
+            </article>
+            <article class="card">
+                <button class="btn-4lg">버튼</button>
+                <button class="btn-4lg btn-primary">버튼</button>
+                <button class="btn-4lg btn-secondary">버튼</button>
+            </article>
+
             <article class="card flex flex-col gap-4 pad-6">
                 <div class="flex flex-col gap-1">
                     <h5>월드클래스의 선택 질레트랩스</h5>
@@ -23,8 +74,8 @@
                 </p>
 
                 <div class="flex flex-row gap-1">
-                    <button class="btn-primary">찜하기</button>
-                    <button class="">구입하기</button>
+                    <button class="btn-secondary">찜하기</button>
+                    <button class="btn-primary">구입하기</button>
                 </div>
             </article>
 
@@ -39,8 +90,8 @@
                 </p>
 
                 <div class="flex flex-row gap-1">
-                    <button class="btn-primary">찜하기</button>
-                    <button class="">구입하기</button>
+                    <button class="btn-secondary">찜하기</button>
+                    <button class="btn-primary">구입하기</button>
                 </div>
             </article>
 
@@ -55,8 +106,8 @@
                 </p>
 
                 <div class="flex flex-row gap-1">
-                    <button class="btn-primary">찜하기</button>
-                    <button class="">구입하기</button>
+                    <button class="btn-secondary">찜하기</button>
+                    <button class="btn-primary">구입하기</button>
                 </div>
             </article>
 
@@ -71,8 +122,8 @@
                 </p>
 
                 <div class="flex flex-row gap-1">
-                    <button class="btn-primary">찜하기</button>
-                    <button class="">구입하기</button>
+                    <button class="btn-secondary">찜하기</button>
+                    <button class="btn-primary">구입하기</button>
                 </div>
             </article>
 
@@ -87,8 +138,8 @@
                 </p>
 
                 <div class="flex flex-row gap-1">
-                    <button class="btn-primary">찜하기</button>
-                    <button class="">구입하기</button>
+                    <button class="btn-secondary">찜하기</button>
+                    <button class="btn-primary">구입하기</button>
                 </div>
             </article>
 
@@ -103,8 +154,8 @@
                 </p>
 
                 <div class="flex flex-row gap-1">
-                    <button class="btn-primary">찜하기</button>
-                    <button class="">구입하기</button>
+                    <button class="btn-secondary">찜하기</button>
+                    <button class="btn-primary">구입하기</button>
                 </div>
             </article>
         </section>
