Add phone layout example

--- a/exmaple/phone layout example.html
+++ b/exmaple/phone layout example.html
@@ -7,8 +7,8 @@
         <link rel="stylesheet" href="../lepton.css" type="text/css"/>
     </head>
 
-    <body>
-        <section class="w-95 h-8 bg-neutral-color-950 flex contents-space-between items-center pad-horizon-2">
+    <body class="pad-10">
+        <section class="w-95 h-10 bg-neutral-color-950 flex contents-space-between items-center pad-horizon-2">
             <div class="flex gap-1">
                 <span class="txt-w-black fg-neutral-color-300">SKT</span>
                 <span class="txt-w-bold fg-neutral-color-50">16:11</span>
@@ -21,7 +21,7 @@
 
         <br/>
 
-        <section class="w-95 h-195 bg-neutral-color-900">
+        <section class="flex flex-col w-95 h-195 bg-neutral-color-900">
             <section class="w-95 h-10 bg-neutral-color-950 flex contents-space-between items-center pad-horizon-2">
                 <div class="flex gap-1">
                     <span class="txt-w-black fg-neutral-color-300">SKT</span>
@@ -31,6 +31,24 @@
                 <div>
                     <span class="bg-neutral-color-100 txt-w-bold pad-vertical-1 pad-horizon-2 radius-full font-size-3">100</span>
                 </div>
+            </section>
+
+            <section>
+                <article class="pad-4 flex flex-col gap-2">
+                    <video class="w-full" src="./KakaoTalk_Video_2025-07-17-01-09-39.mp4"></video>
+                    <span class="fg-neutral-color-50 font-size-5 txt-w-bold">행복한 세상이잖아요 다 같이 웃으면서 살아요</span>
+                </article>
+
+                <article class="pad-4 flex items-center contents-space-between">
+                    <div class="flex gap-2 items-center">
+                        <div class="bg-primary-color-300 wh-11 radius-full"></div>
+                        <span class="fg-neutral-color-50 txt-w-bold">행복한 세상의 족제비</span>
+                        <span class="fg-neutral-color-200">30.1만</span>
+                    </div>
+                    <div class="flex gap-2 items-center">
+                        <button>구독</button>
+                    </div>
+                </article>
             </section>
         </section>
     </body>
