Change phone layout example

--- a/exmaple/phone layout example.html
+++ b/exmaple/phone layout example.html
@@ -14,7 +14,10 @@
                 <span class="txt-w-bold fg-neutral-color-50">16:11</span>
             </div>
 
-            <div>
+            <div class="flex gap-1">
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M6 13 L6 20 M10 10 L10 20 M14 7 L14 20 M18 4 L18 20" stroke="white" stroke-width="1" stroke-linecap="round"></path>
+                </svg>
                 <span class="bg-neutral-color-100 txt-w-bold pad-vertical-1 pad-horizon-2 radius-full font-size-3">100</span>
             </div>
         </section>
