Change phone layout exmaple page

--- a/exmaple/phone layout example.html
+++ b/exmaple/phone layout example.html
@@ -16,7 +16,54 @@
 
             <div class="flex gap-1">
                 <svg class="wh-6" viewBox="0 0 24 24">
-                    <path d="M6 13 L6 20 M10 10 L10 20 M14 7 L14 20 M18 4 L18 20" stroke="white" stroke-width="1" stroke-linecap="round"></path>
+                    <path d="M4 4 a16 16 0 0 1 16 16" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 16 a4 4 0 0 1 4 4" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M4 4 a16 16 0 0 1 16 16" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 16 a4 4 0 0 1 4 4" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M4 4 a16 16 0 0 1 16 16" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 16 a4 4 0 0 1 4 4" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M4 4 a16 16 0 0 1 16 16" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 16 a4 4 0 0 1 4 4" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M6 16 L6 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M10 12 L10 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M14 8 L14 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M18 4 L18 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M6 16 L6 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M10 12 L10 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M14 8 L14 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M18 4 L18 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M6 16 L6 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M10 12 L10 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M14 8 L14 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M18 4 L18 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M6 16 L6 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M10 12 L10 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M14 8 L14 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M18 4 L18 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M6 16 L6 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M10 12 L10 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M14 8 L14 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M18 4 L18 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
                 </svg>
                 <span class="bg-neutral-color-100 txt-w-bold pad-vertical-1 pad-horizon-2 radius-full font-size-3">100</span>
             </div>
