Change phone layout example page

--- a/exmaple/phone layout example.html
+++ b/exmaple/phone layout example.html
@@ -16,25 +16,68 @@
 
             <div class="flex gap-1">
                 <svg class="wh-6" viewBox="0 0 24 24">
-                    <path d="M4 4 a16 16 0 0 1 16 16" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 5 a15 15 0 0 1 15 15" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
                     <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
-                    <path d="M4 16 a4 4 0 0 1 4 4" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 15 a5 5 0 0 1 5 5" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 20 L4 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
                 </svg>
                 <svg class="wh-6" viewBox="0 0 24 24">
-                    <path d="M4 4 a16 16 0 0 1 16 16" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M6 16 L6 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M10 12 L10 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M14 8 L14 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M18 4 L18 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+                <span class="bg-neutral-color-100 txt-w-bold pad-vertical-1 pad-horizon-2 radius-full font-size-3">100</span>
+            </div>
+        </section>
+
+        <br/>
+
+        <section class="w-95 h-10 bg-neutral-color-950 flex contents-space-between items-center pad-horizon-2">
+            <div class="flex gap-1">
+            </div>
+
+            <div class="flex gap-1">
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M4 5 a15 15 0 0 1 15 15" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
                     <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
-                    <path d="M4 16 a4 4 0 0 1 4 4" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 15 a5 5 0 0 1 5 5" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 20 L4 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
                 </svg>
                 <svg class="wh-6" viewBox="0 0 24 24">
-                    <path d="M4 4 a16 16 0 0 1 16 16" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
-                    <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
-                    <path d="M4 16 a4 4 0 0 1 4 4" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 5 a15 15 0 0 1 15 15" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 15 a5 5 0 0 1 5 5" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 20 L4 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
                 </svg>
                 <svg class="wh-6" viewBox="0 0 24 24">
-                    <path d="M4 4 a16 16 0 0 1 16 16" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
-                    <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
-                    <path d="M4 16 a4 4 0 0 1 4 4" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 5 a15 15 0 0 1 15 15" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 15 a5 5 0 0 1 5 5" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 20 L4 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
                 </svg>
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M4 5 a15 15 0 0 1 15 15" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 15 a5 5 0 0 1 5 5" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 20 L4 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+                <svg class="wh-6" viewBox="0 0 24 24">
+                    <path d="M4 5 a15 15 0 0 1 15 15" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 10 a10 10 0 0 1 10 10" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 15 a5 5 0 0 1 5 5" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                    <path d="M4 20 L4 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
+                </svg>
+            </div>
+        </section>
+
+        <br/>
+
+        <section class="w-95 h-10 bg-neutral-color-950 flex contents-space-between items-center pad-horizon-2">
+            <div class="flex gap-1">
+            </div>
+
+            <div class="flex gap-1">
                 <svg class="wh-6" viewBox="0 0 24 24">
                     <path d="M6 16 L6 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
                     <path d="M10 12 L10 20" fill="none" stroke="gray" stroke-width="1.5" stroke-linecap="round"></path>
@@ -65,7 +108,6 @@
                     <path d="M14 8 L14 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
                     <path d="M18 4 L18 20" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round"></path>
                 </svg>
-                <span class="bg-neutral-color-100 txt-w-bold pad-vertical-1 pad-horizon-2 radius-full font-size-3">100</span>
             </div>
         </section>
 
